@@ -29,6 +29,7 @@ v 6.7.0
   - Better API responses for access_levels (sponsored by O'Reilly Media)
   - Requires at least 2 unicorn workers
   - Requires gitlab-shell v1.9+
+  - Fix `/:username.keys` response content type (Dmitry Medvinsky)
 
 v 6.6.5
   - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)
